@@ -2214,6 +2214,7 @@ GEN     famatsmall_reduce(GEN fa);
 GEN     gpidealval(GEN nf, GEN ix, GEN P);
 GEN     gpidealfactor(GEN nf, GEN x, GEN lim);
 GEN     idealHNF_Z_factor(GEN x, GEN *pvN, GEN *pvZ);
+GEN     idealHNF_Z_factor_i(GEN x, GEN f, GEN *pvN, GEN *pvZ);
 GEN     idealtwoelt(GEN nf, GEN ix);
 GEN     idealtwoelt0(GEN nf, GEN ix, GEN a);
 GEN     idealtwoelt2(GEN nf, GEN x, GEN a);
@@ -2235,6 +2236,7 @@ GEN     idealdivexact(GEN nf, GEN x, GEN y);
 GEN     idealdivpowprime(GEN nf, GEN x, GEN vp, GEN n);
 GEN     idealmulpowprime(GEN nf, GEN x, GEN vp, GEN n);
 GEN     idealfactor(GEN nf, GEN x);
+GEN     idealfactor_limit(GEN nf, GEN x, ulong lim);
 GEN     idealhnf(GEN nf, GEN x);
 GEN     idealhnf_principal(GEN nf, GEN x);
 GEN     idealhnf_shallow(GEN nf, GEN x);
